RM-1067: deliver durable remote execution
